--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -291,7 +291,7 @@ input#user_password.form-control {
 */
 .search_container{
     background-color: #fff;
-    padding-top: 50px;
+    margin-top: 50px;
 }
 .centered_search_container {
     margin: 0 auto;
@@ -301,7 +301,6 @@ input#user_password.form-control {
 
 .input-group{
   margin-bottom: 20px;
-  z-index: 100;
 }
 .dropdown.dropdown-lg .dropdown-menu {
     margin-top: -1px;
