fix tag creation

--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -37,7 +37,7 @@
     <%= form.fields_for :tag do |t| %>
     <div class="field">
       <%= t.label :tags %>
-      <%= t.text_field :name, :class => 'form-control awesomplete', :placeholder => 'Seperate tags with comma' %>
+      <%= t.text_field :name, :class => 'form-control', :placeholder => 'Seperate tags with comma' %>
     </div>
     <% end %>
 
