add bookings link to header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
                   <div class="dropdown-content">
                     <a href="#">Profile</a>
                     <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
-                    <%= link_to 'My bookings' %>
+                    <%= link_to 'My bookings', my_bookings_path %>
                   </div>
                 </div>
 
