--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -109,7 +109,7 @@
       </div>
       <div class="row" style="margin-top: 20px; margin-bottom: 30px;">
         <div class="col-12">
-          <button type="submit" class="btn btn-primary">
+          <button type="submit" class="btn btn-primary cursor">
             Search
           </button>
         </div>
