--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <% if @places.length == 0 %>
     <div class="col-12">
-      <h1 class="text-uppercase align" style="margin-top:60px"> Uh oh !</h1>
+      <h1 class="text-uppercase align" style="margin-top:60px"> Uh oh ! 😥 </h1>
       <div>
         <p class="text-faded mb-5 align"> It seems like there's no set here.</p>
       </div>
