Edit a set security

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -80,7 +80,9 @@
               </li>
             </ul>
             <div class="card-body">
-              <%= link_to 'Edit', edit_place_path(place), class: 'card-link' %>
+              <% if current_user.id == place.user_id %>
+                <%= link_to 'Edit', edit_place_path(place), class: 'card-link' %>
+              <% end %>
               <%= link_to 'More', place, class: 'btn btn-primary' %>
             </div>
           </div>
