--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <% if current_user %>
     <header class="Header">
       <nav class="navbar navbar-default Nav">
-        <div class="container">
+        <div class="container-fluid">
           <div class="navbar-header">
             <%= link_to 'Rent a Set', root_path, :class => 'navbar-brand' %>
           </div>
