--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
                 <a class="nav-link active" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Sets</a>
+                <a class="nav-link" href="/places/">Sets</a>
               </li>
               <li class="nav-item">
                 <%= link_to 'Login', new_user_session_path, class: 'nav-link' %>
