--- a/app/views/bookings/my_bookings.html.erb
+++ b/app/views/bookings/my_bookings.html.erb
@@ -2,16 +2,24 @@
   <div class="row">
     <div class="col-12">
       <h3>My bookings</h3>
+      <hr>
     </div>
   </div>
   <div class="row">
-    <% @bookings.each do |booking| %>
+    <% @bookings.each_with_index do |booking, index| %>
     <div class="col-12">
-      booking found
+      <h5>Booking n°<%= index+1 %></h5>
+      <div>
+        Set reference: #000<%= booking.place_id %>
+      </div>
       <br>
-      <%= booking.start_time %>
-      <br>
-      place_id: <%= booking.place_id %>
+      <div>
+        Start time: <%= booking.start_time %>
+      </div>
+      <div>
+        End time: <%= booking.end_time %>
+      </div>
+      <hr>
     </div>
     <% end %>
   </div>
