--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -11,7 +11,7 @@
       <%else%>
       <div class="row">
         <div class="col">
-          <h2>Places<span> - <%= @places.length %> found</span></h2>
+          <h2>Sets<span> - <%= @places.length %> found</span></h2>
         </div>
       </div>
     <% end %>
