--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing Place</h1>
-
-<%= render 'form', place: @place %>
-
-<%= link_to 'Show', @place %> |
-<%= link_to 'Back', places_path %>
+<div class="container">
+  <div class="row Place-row">
+    <div class="col-8" style="margin-top:30px;">
+      <h4>Edit your set</h4>
+      <hr>
+      <%= render 'form', place: @place %>
+    </div>
+  </div>
+</div>
