:fire: hotfix avatar label

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,7 +35,10 @@
         </div>
 
         <div class="form-group">
-          <%= f.file_field :avatar %>
+          <%= f.label :'Avatar' %>
+          <p>
+            <%= f.file_field :avatar %>
+          </p>
         </div>
 
         <div class="actions">
